[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Objects/Coin_02.png" type="Texture" id=1]
[ext_resource path="res://Assets/Objects/Coin_06.png" type="Texture" id=2]
[ext_resource path="res://Assets/Objects/Coin_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Objects/Coin_04.png" type="Texture" id=4]
[ext_resource path="res://Assets/Objects/Coin_03.png" type="Texture" id=5]
[ext_resource path="res://Assets/Objects/Coin_05.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Coin.gd" type="Script" id=7]
[ext_resource path="res://Assets/Collected.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sounds/coin.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Collected",
"speed": 20.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Coin" type="Area2D"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
frame = 3
playing = true

[node name="coinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
